; ModuleID = '/home/carl/AnghaBench/toxcore/toxcore/extr_net_crypto.c_udp_handle_cookie_request.c'
source_filename = "/home/carl/AnghaBench/toxcore/toxcore/extr_net_crypto.c_udp_handle_cookie_request.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { %struct.TYPE_5__* }
%struct.TYPE_5__ = type { i32 }

@COOKIE_REQUEST_PLAIN_LENGTH = common dso_local global i32 0, align 4
@crypto_box_BEFORENMBYTES = common dso_local global i32 0, align 4
@crypto_box_PUBLICKEYBYTES = common dso_local global i32 0, align 4
@COOKIE_RESPONSE_LENGTH = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32, i32*, i32)* @udp_handle_cookie_request to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @udp_handle_cookie_request(i8* %0, i32 %1, i32* %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca %struct.TYPE_6__*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i64, align 8
  %13 = alloca i64, align 8
  %14 = alloca i64, align 8
  %15 = alloca i32, align 4
  %16 = alloca i64, align 8
  store i8* %0, i8** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32* %2, i32** %8, align 8
  store i32 %3, i32* %9, align 4
  %17 = load i8*, i8** %6, align 8
  %18 = bitcast i8* %17 to %struct.TYPE_6__*
  store %struct.TYPE_6__* %18, %struct.TYPE_6__** %10, align 8
  %19 = load i32, i32* @COOKIE_REQUEST_PLAIN_LENGTH, align 4
  %20 = zext i32 %19 to i64
  %21 = call i8* @llvm.stacksave()
  store i8* %21, i8** %11, align 8
  %22 = alloca i32, i64 %20, align 16
  store i64 %20, i64* %12, align 8
  %23 = load i32, i32* @crypto_box_BEFORENMBYTES, align 4
  %24 = zext i32 %23 to i64
  %25 = alloca i32, i64 %24, align 16
  store i64 %24, i64* %13, align 8
  %26 = load i32, i32* @crypto_box_PUBLICKEYBYTES, align 4
  %27 = zext i32 %26 to i64
  %28 = alloca i32, i64 %27, align 16
  store i64 %27, i64* %14, align 8
  %29 = load %struct.TYPE_6__*, %struct.TYPE_6__** %10, align 8
  %30 = load i32*, i32** %8, align 8
  %31 = load i32, i32* %9, align 4
  %32 = call i64 @handle_cookie_request(%struct.TYPE_6__* %29, i32* %22, i32* %25, i32* %28, i32* %30, i32 %31)
  %33 = icmp ne i64 %32, 0
  br i1 %33, label %34, label %35

34:                                               ; preds = %4
  store i32 1, i32* %5, align 4
  store i32 1, i32* %15, align 4
  br label %61

35:                                               ; preds = %4
  %36 = load i32, i32* @COOKIE_RESPONSE_LENGTH, align 4
  %37 = zext i32 %36 to i64
  %38 = alloca i32, i64 %37, align 16
  store i64 %37, i64* %16, align 8
  %39 = load %struct.TYPE_6__*, %struct.TYPE_6__** %10, align 8
  %40 = call i32 @create_cookie_response(%struct.TYPE_6__* %39, i32* %38, i32* %22, i32* %25, i32* %28)
  %41 = sext i32 %40 to i64
  %42 = mul nuw i64 4, %37
  %43 = icmp ne i64 %41, %42
  br i1 %43, label %44, label %45

44:                                               ; preds = %35
  store i32 1, i32* %5, align 4
  store i32 1, i32* %15, align 4
  br label %61

45:                                               ; preds = %35
  %46 = load %struct.TYPE_6__*, %struct.TYPE_6__** %10, align 8
  %47 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %46, i32 0, i32 0
  %48 = load %struct.TYPE_5__*, %struct.TYPE_5__** %47, align 8
  %49 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %48, i32 0, i32 0
  %50 = load i32, i32* %49, align 4
  %51 = load i32, i32* %7, align 4
  %52 = mul nuw i64 4, %37
  %53 = trunc i64 %52 to i32
  %54 = call i64 @sendpacket(i32 %50, i32 %51, i32* %38, i32 %53)
  %55 = trunc i64 %54 to i32
  %56 = sext i32 %55 to i64
  %57 = mul nuw i64 4, %37
  %58 = icmp ne i64 %56, %57
  br i1 %58, label %59, label %60

59:                                               ; preds = %45
  store i32 1, i32* %5, align 4
  store i32 1, i32* %15, align 4
  br label %61

60:                                               ; preds = %45
  store i32 0, i32* %5, align 4
  store i32 1, i32* %15, align 4
  br label %61

61:                                               ; preds = %60, %59, %44, %34
  %62 = load i8*, i8** %11, align 8
  call void @llvm.stackrestore(i8* %62)
  %63 = load i32, i32* %5, align 4
  ret i32 %63
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i64 @handle_cookie_request(%struct.TYPE_6__*, i32*, i32*, i32*, i32*, i32) #2

declare dso_local i32 @create_cookie_response(%struct.TYPE_6__*, i32*, i32*, i32*, i32*) #2

declare dso_local i64 @sendpacket(i32, i32, i32*, i32) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
